[package]
name = "cambia"
version = "0.1.0"
edition = "2021"

[features]
default = ["server"]
server = []
experimental_rippers = ["cambia-core/experimental_rippers"]
experimental_evaluators = ["cambia-core/experimental_evaluators"]

[dependencies]
cambia-core = { path = "cambia-core" }
mime_guess = "2.0.5"
tracing-subscriber = "0.3.18"
figlet-rs = "0.1.5"
tracing = "0.1.40"
hex = "0.4.3"
tower-http = { version = "0.5.2", features = ["compression-full", "cors", "decompression-full", "trace"] }
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rmp-serde = "1.1.1"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.17", features = ["env", "derive"] }
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-msgpack = "0.4.0"
rust-embed = { version = "8.5.0", features = ["axum", "debug-embed", "compression", "include-exclude"] }
axum-client-ip = "0.6.0"

[profile.release]
panic = "abort"
codegen-units = 1
strip = true
lto = "fat"
