[package]
name = "cambia-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["eac", "xld", "whipper", "ops_ev"]
experimental_rippers = ["cueripper"]
experimental_evaluators = ["cambia_ev"]
eac = []
xld = []
whipper = []
cueripper = ["eac"]
gazelle_ev = []
ops_ev = ["gazelle_ev"]
red_ev = ["gazelle_ev"]
cambia_ev = []

[build-dependencies]
codegen = "0.2.0"
regex = "1"
walkdir = "2"
simple-text-decode = { path = "../simple-text-decode" }
sha2 = "0.10.6"
hex = "0.4.3"
scraper = "0.20.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
accuraterip-drive-db = { path = "../accuraterip-drive-db" }
itertools = "0.13.0"

[dependencies]
aho-corasick = "1.1.3"
hex = "0.4.3"
indexmap = { version = "2.5.0", features = ["serde"] }
lazy_static = "1.5.0"
regex = "1"
ts-rs = "6.2.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simple-text-decode = { path = "../simple-text-decode" }
tokio = { version = "1.40.0", features = ["full"] }
phf = { version = "0.11.2", features = ["macros"] }
sha1 = "0.10.5"
base64 = "0.22.1"
serde_yaml = "0.9.19"
tracing = "0.1.40"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
mime_guess = "2.0.5"
urlencoding = "2.1.3"
futures = "0.3.30"
rayon = "1.10.0"
textdistance = "1.1.0"
semver = "1.0.23"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }

[profile.release]
panic = "abort"
codegen-units = 1
strip = true
lto = "fat"
