[package]
name = "simple-text-decode"
description = "Convenient wrapper around chardet to return decoded text in a more accessible way"
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["arg274"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardetng = { version = "0.1.17", features = ["multithreading"] }
unicode-bom = "2.0.3"
encoding_rs = "0.8.33"
widestring = "1.0.2"